--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/modern-normalize.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">    
+<link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="page">
 
     <!--шапка-->
-   <header>
-       <nav>
+      <header>
+       <nav class="container">
        <a class="logo" href=""><span class="logo-web">Web</span>Studio</a>
            
                <ul class="site-nav">
@@ -22,11 +23,14 @@
                    <li> <a href="" class="link">Контакты</a></li>
                </ul>
         </nav>
+        <div class="container-contact">
                <ul class="contact">
                    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
                </ul>
-    </header> 
+            </div>
+        </header> 
+    
 
     <!--герой-->
     <main>
