--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <!--шапка-->
       <header>
           <!-- container -->
-         <div class="container">
+         <div class="container main-nav">
        <nav class="nav">
        <a class="logo" href=""><span class="logo-web">Web</span>Studio</a>
            
                <ul class="site-nav">
-                   <li> <a href="./index.html" class="link carent">Студия</a></li>
-                   <li> <a href="./potrfolio.html" class="link">Портфолио</a></li>
-                   <li> <a href="" class="link">Контакты</a></li>
+                   <li class="nav-item"> <a href="./index.html" class="link carent">Студия</a></li>
+                   <li class="nav-item"> <a href="./potrfolio.html" class="link">Портфолио</a></li>
+                   <li class="nav-item"> <a href="" class="link">Контакты</a></li>
                </ul>
         </nav>
 
