--- a/potrfolio.html
+++ b/potrfolio.html
@@ -13,7 +13,8 @@
 <body class="page">
 
     <!--шапка-->
-   <header>
+   <header class="page-header">
+    <div class="container main-nav">
        <nav>
        <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
            
@@ -27,22 +28,23 @@
                    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
                </ul>
+    </div>
     </header> 
      <main>
-     <ul>
-         <li>
+     <ul class="title-btn">
+         <li class="btn-btn">
              <button class="btn">Все</button>
          </li>
-         <li>
+         <li class="btn-btn">
              <button class="btn">Веб-сайты</button>
          </li>
-         <li>
+         <li class="btn-btn">
              <button class="btn">Приложения</button>
          </li>
-         <li>
+         <li class="btn-btn">
              <button class="btn">Дизайн</button>
          </li>
-         <li>
+         <li class="btn-btn">
              <button class="btn">Маркетинг</button>
          </li>
      </ul>
