--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
        <a class="logo" href=""><span class="logo-web">Web</span>Studio</a>
            
                <ul class="site-nav">
-                   <li class="nav-item"> <a href="./index.html" class="link carent">Студия</a></li>
-                   <li class="nav-item"> <a href="./potrfolio.html" class="link">Портфолио</a></li>
-                   <li class="nav-item"> <a href="" class="link">Контакты</a></li>
+                   <li class="item"> <a href="./index.html" class="link carent">Студия</a></li>
+                   <li class="item"> <a href="./potrfolio.html" class="link">Портфолио</a></li>
+                   <li class="item"> <a href="" class="link">Контакты</a></li>
                </ul>
-        </nav>
+            </nav>
 
-               <ul class="contact">
-                   <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                   <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+               <ul class="nav-adress">
+                   <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                   <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
                </ul>
             </div>
     </header> 
@@ -51,19 +51,19 @@
 
               <h2 class="visually-hidden">особености</h2>
               <ul class="feature-list">
-                  <li>
+                  <li class="items">
                       <h3 class="title">Внимание к деталям</h3>
                       <p class="desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                   </li>
-                  <li>
+                  <li class="items">
                       <h3 class="title">Пунктуальность</h3>
                       <p class="desc">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                   </li>
-                  <li>
+                  <li class="items">
                       <h3 class="title">Планирование</h3>
                       <p class="desc">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                   </li>
-                  <li>
+                  <li class="items">
                       <h3 class="title">Современные</h3>
                       <p class="desc">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                   </li>
@@ -79,17 +79,17 @@
 
         <h2 class="section-title">Чем мы занимаемся</h2>
               <ul class="feature-list">
-                  <li>
+                  <li class="pic">
                      <a href="">
                           <img src="./images/box-1.jpg" alt="компютер" width="370">
                         </a>
                     </li>    
-                    <li>
+                    <li class="pic">
                       <a href="">
                             <img src="./images/box-2.jpg" alt="робоча зона " width="370">
                       </a>
                     </li>
-                    <li>
+                    <li class="pic">
                        <a href="">
                            <img src="./images/box-3.jpg" alt="планшет" width="370">
                         </a>
@@ -107,22 +107,22 @@
           
     <h2 class="section-title">Наша команда</h2>
       <ul class="section-user">
-          <li>
+          <li class="user">
               <img src="./images/img.jpg" alt="Product Designer" width="270">
               <h3 class="item">Игорь Демьяненко</h3>
               <p class="link">Product Designer</p>
           </li>
-          <li>
+          <li class="user">
               <img src="./images/img-(1).jpg" alt="Frontend Developer" width="270">
               <h3 class="item">Ольга Репина</h3>
               <p class="link">Frontend Developer</p>
           </li>
-          <li>
+          <li class="user">
               <img src="./images/img-(2).jpg" alt="Marketing" width="270">
               <h3 class="item">Николай Тарасов</h3>
               <p class="link">Marketing</p>
           </li>
-          <li>
+          <li class="user">
               <img src="./images/img-(3).jpg" alt="UI Designer" width="270">
               <h3 class="item">Михаил Ермаков</h3>
               <p class="link">UI Designer</p>
