--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--герой-->
     <main>
     <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
        <button class="button">Заказать услугу</button> 
     </section>
 
