--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--герой-->
     <main>
     <section class="hero">
-        <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
        <button class="button">Заказать услугу</button> 
     </section>
 
@@ -108,25 +108,41 @@
     <h2 class="section-title">Наша команда</h2>
       <ul class="section-user">
           <li class="user">
+              <div class="pic">
               <img src="./images/img.jpg" alt="Product Designer" width="270">
+              </div>
+              <div class="pic-content">
               <h3 class="item">Игорь Демьяненко</h3>
               <p class="link">Product Designer</p>
-          </li>
+              </div>
+            </li>
           <li class="user">
+              <div class="pic">
               <img src="./images/img-(1).jpg" alt="Frontend Developer" width="270">
+              </div>
+              <div class="pic-content">
               <h3 class="item">Ольга Репина</h3>
               <p class="link">Frontend Developer</p>
-          </li>
+            </div>
+            </li>
           <li class="user">
+              <div class="pic">
               <img src="./images/img-(2).jpg" alt="Marketing" width="270">
+              </div>
+              <div class="pic-content">
               <h3 class="item">Николай Тарасов</h3>
               <p class="link">Marketing</p>
-          </li>
+                     </div>
+            </li>
           <li class="user">
+              <div class="pic">
               <img src="./images/img-(3).jpg" alt="UI Designer" width="270">
+              </div>
+              <div class="pic-content">
               <h3 class="item">Михаил Ермаков</h3>
               <p class="link">UI Designer</p>
-          </li>
+                   </div>
+            </li>
       </ul>
     </div>
   </section>
