--- a/potrfolio.html
+++ b/potrfolio.html
@@ -33,6 +33,7 @@
           </div>
   </header>  
      <main>
+         
      <ul class="title-btn">
          <li class="btn-btn">
              <button class="btn">Все</button>
@@ -132,7 +133,7 @@
                  </div>
                 <div class="card-contents">
                  <h2 class="title">Издание Limited Edition</h2>
-                 <p>Дизайн</p>
+                 <p class="list">Дизайн</p>
                     </div>
                 </article>
              </li>
@@ -171,9 +172,9 @@
       <address class="adres">
   
          <ul class="contact">
-          <li><a href="" class="items">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com" class="item">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="item">+38 096 111 11 11</a></li>
+          <li class="links"><a href="" class="items">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li class="links"><a href="mailto:info@devstudio.com" class="item">info@devstudio.com</a></li>
+          <li class="links"><a href="tel:+380961111111" class="item">+38 096 111 11 11</a></li>
       </ul>
   
       </address>
