--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
     <address class="adres">
 
        <ul class="contact">
-        <li><a href="" class="items">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com" class="item">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="item">+38 096 111 11 11</a></li>
+        <li class="links"><a href="" class="items">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li class="links"><a href="mailto:info@devstudio.com" class="item">info@devstudio.com</a></li>
+        <li class="links"><a href="tel:+380961111111" class="item">+38 096 111 11 11</a></li>
     </ul>
 
     </address>
